--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 </head>
  
 <body>
+ <!--文字の大きさの練習-->
+ <h1>練習問題2.2</h1>
  
 <h1>Hello World</h1>
- 
+ <h2>Hello World</h2>
+ <h3>Hello World</h3>
+ <li>ほげほげ</li>
+ <li>ほにゃらら</li>
+</ol>
 </body>
  
 </html>
