--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <li>ほげほげ</li>
   <li>ほにゃらら</li>
 </ol>
-</body><dl>
+</body>
+<body>
+ <dl>
   <dt>作者</dt>
   <dd>ジョン</dd>
   <dd>ポール</dd>
@@ -48,4 +50,5 @@
  <dt>それ以外の場合</dt>
  <dd>ポイントは加算されません。</dd>
 </dl>
+</body>
 </html>
