--- a/index.html
+++ b/index.html
@@ -49,5 +49,23 @@
  <dt>それ以外の場合</dt>
  <dd>ポイントは加算されません。</dd>
 </dl>
+ <h3>練習問題2.4</h3>
+ <table>
+  <caption>
+   <strong>お寿司をどこで食べるのか？その長所と短所</strong>
+   <details>
+    <summary>このテーブルの説明</summary>
+    <p>以下のテーブルでは、2番目のカラムに寿司店のタイプが入れられています。その左側にそのようなタイプのお店でお寿司を食べる場合の長所が、右側に短所が入れられています。</p>
+   </details>
+  </caption>
+  <thead>
+   <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr></thead>
+  <tbody>
+   <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店</th><td>値段が時価で不安、予約が必要</td></tr>
+   <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司</th><td>ネタが解凍もの、休みの日は混む</td></tr>
+  </tbody>
+ </table>
+ 
+  
 </body>
 </html>
