--- a/index.html
+++ b/index.html
@@ -62,10 +62,21 @@
    <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr></thead>
   <tbody>
    <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店</th><td>値段が時価で不安、予約が必要</td></tr>
-   <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司</th><td>ネタが解凍もの、休みの日は混む</td></tr>
+   <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司</th><td>ネタが冷凍もの、休みの日は混む</td></tr>
   </tbody>
  </table>
- 
-  
+ <thble>
+  <canption>
+   <strong>お寿司をどこで食べるのか？その長所と短所</strong>
+  </canption>
+  <thead>
+   <tbody>
+    <tr><th>どこで食べるのか</th><th>長所</th><th>短所</th></tr>
+   </tbody>
+  <tbody>
+   <tr><th>銀座の高級店</th><td>ネタにこだわり、技術が素晴らしい</td><td>値段が時価で不安、予約が必要</td></tr>
+   <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが冷凍もの、休みの日は混む</td></tr>
+  </tbody>
+ </thble>
 </body>
 </html>
