--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司</th><td>ネタが冷凍もの、休みの日は混む</td></tr>
   </tbody>
  </table>
- <thble>
+ <table>
   <canption>
    <strong>お寿司をどこで食べるのか？その長所と短所</strong>
   </canption>
@@ -77,6 +77,6 @@
    <tr><th>銀座の高級店</th><td>ネタにこだわり、技術が素晴らしい</td><td>値段が時価で不安、予約が必要</td></tr>
    <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが冷凍もの、休みの日は混む</td></tr>
   </tbody>
- </thble>
+ </table>
 </body>
 </html>
