--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
  <table>
   <caption>
    <strong>お寿司をどこで食べるのか？その長所と短所</strong>
-  </canption>
+  </caption>
   <thead>
    <tbody>
     <tr><th>どこで食べるのか</th><th>長所</th><th>短所</th></tr>
