--- a/index.html
+++ b/index.html
@@ -78,5 +78,15 @@
    <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが冷凍もの、休みの日は混む</td></tr>
   </tbody>
  </table>
+ <h3>練習問題2.5</h3>
+ <ul>
+  <li>参考資料を調べ、次のように表示されるHTMLを書きなさい。
+   <p
+    style="margin:1ex">x<sup>2</sup>+y<sup>2</sup>=z<sup>2</sup>
+    <br>
+    この授業は<b>情報特講1</b>で、<s>眠くなる</s>大変興味深い内容です<br>
+    <bdo dir="rtl">昔の日本語は右から左に書いていました。</bdo></p>
+  </li>
+ </ul>
 </body>
 </html>
