--- a/index.html
+++ b/index.html
@@ -90,3 +90,15 @@
  </ul>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="ja"> 
+<head>
+ <meta charset="utf-8">
+ <title>練習問題2.6</title>
+</head>
+ <body>
+  <p>テキスト入力:<input type="text"></p>
+ </body>
+</html>
+
+ 
