--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
   </li>
  </ul>
 </body>
-<title>練習問題2.6</title>
-</head>
+<h1>練習問題2.6<h1>
  <body>
   <p>テキスト入力:<input type="text"></p>
  </body>
